syntax = "proto3";

option csharp_namespace = "GrpcServices.AccountService";

service Account {
  rpc Register (RegisterRequest) returns (RegisterReply);
  rpc Login (LoginRequest) returns (LoginReply);
  rpc RememberPassword (RememberPasswordRequest) returns (RememberPasswordReply);
  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordReply);
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message RegisterReply {
  bool success = 1;
  string message = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply {
  bool success = 1;
  string message = 2;
}

message RememberPasswordRequest {
  string email = 1;
}

message RememberPasswordReply {
  bool success = 1;
  string message = 2;
}

message ResetPasswordRequest {
  string email = 1;
  string newPassword = 2;
}

message ResetPasswordReply {
  bool success = 1;
  string message = 2;
}
